--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@next/font": "^13.0.6",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "mongoose": "^6.8.2",
+    "mongoose": "^6.11.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
+    "styles": "^0.2.1",
     "swr": "^2.0.0"
   },
   "devDependencies": {
